# minisql

./: .gitignore  Cargo.toml  README.md
sql_mini_execution/: Cargo.toml
sql_mini_execution/src/: error.rs  lib.rs  row.rs  table.rs
sql_mini_parser/: Cargo.toml
sql_mini_parser/src/: ast.rs  lib.rs  parse.rs  value.rs
sql_mini_parser/src/commands/: create.rs  insert.rs  mod.rs  select.rs
sql_mini_repl/: Cargo.toml  history.txt
sql_mini_repl/src/: main.rs
