[package]
name = "sql_mini_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
miette = "7.6.0"
nom = "8.0.0"
nom-supreme = "0.8.0"
nom_locate = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
